# colossus

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/cli/: mod.rs
src/core/: engine.rs  heap.rs  mod.rs
src/infrastructure/: mod.rs
src/nodes/: mod.rs
src/nodes/base/: mod.rs
src/nodes/log/: mod.rs
src/shared/: mod.rs
src/shared/types/: mod.rs
src/shared/types/workflow/: input.rs  mod.rs  node.rs  options.rs  output.rs  status.rs  variable.rs  workflow.rs
workflows/: simple-log.yml
