[package]
name = "colossus"
description = ""
authors = ["Julien Andreu<julienandreu@me.com>"]
repository = "https://github.com/julienandreu/colossus"
license-file = "LICENSE"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3
strip = true      # Remove debug symbols
