[package]
name = "colossus"
description = "A robust and ergonomic workflow execution engine for Rust"
authors = ["Julien Andreu<julienandreu@me.com>"]
repository = "https://github.com/julienandreu/colossus"
license-file = "LICENSE"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
keywords = ["workflow", "engine", "yaml", "automation", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3
strip = true      # Remove debug symbols

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
